// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Schema test suite additionalItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 1;
    for (; v1 < v0.length; (v1)++) {
      if (f1(v0[v1]) !== 0) {
        return 1;
      }
    }
    if (0 < v0.length && f2(v0[0]) !== 0) {
      return 2;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (Array.isArray(v0)) {
      v1 = 0;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== 0) {
          return 1;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0.length > 3) {
      return 1;
    }
    if (0 < v0.length && f1(v0[0]) !== 0) {
      return 2;
    }
    if (1 < v0.length && f1(v0[1]) !== 0) {
      return 3;
    }
    if (2 < v0.length && f1(v0[2]) !== 0) {
      return 4;
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== 0) {
            return 1;
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== 0) {
            return 2;
          } else {
            v3 = true;
          }
        }
        if (v1.match(/^v/)) {
          if (f1(v2) !== 0) {
            return 3;
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          return 4;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== 0) {
            return 1;
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== 0) {
            return 2;
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f2(v2) !== 0) {
          return 3;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'boolean') {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (f1(v2) !== 0) {
          return 1;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 2;
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== 0) {
      return 1;
    }
    if (f2(v0) !== 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f3(v1) !== 0) {
          return 2;
        }
      } else {
        return 3;
      }
    }
    return 0;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f4(v1) !== 0) {
          return 4;
        }
      } else {
        return 5;
      }
    }
    return 0;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 6;
    }
    return 0;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      return 7;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (f1(v0) !== 0) {
      return 1;
    }
    if (f2(v0) !== 0) {
      return 1;
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f3(v1) !== 0) {
          return 2;
        }
      } else {
        return 3;
      }
    }
    return 0;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f4(v1) !== 0) {
          return 4;
        }
      } else {
        return 5;
      }
    }
    return 0;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.baz;
      if (v1 !== undefined) {
        if (f5(v1) !== 0) {
          return 6;
        }
      } else {
        return 7;
      }
    }
    return 0;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 8;
    }
    return 0;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      return 9;
    }
    return 0;
  }
  function f5(v0) {
    if (v0 !== null) {
      return 10;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== 0) {
      return 1;
    }
    if (f2(v0) !== 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 === 'number' && v0 > 30) {
      return 2;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 20) {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === 0 && (v1)++;
    f2(v0) === 0 && (v1)++;
    if (v1 === 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === 0 && (v1)++;
    f2(v0) === 0 && (v1)++;
    if (v1 === 0) {
      return 1;
    }
    if (typeof v0 !== 'string') {
      return 2;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      return 2;
    }
    if (typeof v0 !== 'string') {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && v0.foo === undefined) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.quux !== undefined) {
      if (v0.foo === undefined) {
        return 1;
      }
      if (v0.bar === undefined) {
        return 1;
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && f1(v0) !== 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== 0) {
        return 2;
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== 0) {
        return 3;
      }
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 1) {
      (v1)++;
    }
    if (v0 === 2) {
      (v1)++;
    }
    if (v0 === 3) {
      (v1)++;
    }
    if (v1 === 0) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 6) {
      (v1)++;
    }
    if (v0 === 'foo') {
      (v1)++;
    }
    if (JSON.stringify(v0) === '[]') {
      (v1)++;
    }
    if (v0 === true) {
      (v1)++;
    }
    if (JSON.stringify(v0) === '{\\"foo\\":12}') {
      (v1)++;
    }
    if (v1 === 0) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f2(v1) !== 0) {
          return 2;
        }
      } else {
        return 3;
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 4;
    }
    return 0;
  }
  function f1(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'foo') {
      (v1)++;
    }
    if (v1 === 0) {
      return 5;
    }
    return 0;
  }
  function f2(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'bar') {
      (v1)++;
    }
    if (v1 === 0) {
      return 6;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (Array.isArray(v0)) {
      v1 = 0;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== 0) {
          return 1;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== 0) {
      return 1;
    }
    if (1 < v0.length && f2(v0[1]) !== 0) {
      return 2;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length > 2) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length > 2) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 > 3) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 >= 3) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length < 1) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length < 1) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 < 1.1) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 <= 1.1) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 2;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 1;
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 1.5;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 1;
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 0.0001;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 1;
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    var v2;
    v2 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v2)++;
    }
    if (typeof v0 !== 'boolean') {
      (v2)++;
    }
    if (v2 === 2) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === 0) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== 0) {
        return 2;
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (f2(v0) === 0) {
      return 2;
    }
    return 0;
  }
  function f2(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === 0) {
      (v1)++;
    }
    if (f2(v0) === 0) {
      (v1)++;
    }
    if (v1 !== 1) {
      return 1;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === 0) {
      (v1)++;
    }
    if (f2(v0) === 0) {
      (v1)++;
    }
    if (v1 !== 1) {
      return 1;
    }
    if (typeof v0 !== 'string') {
      return 2;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length > 4) {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/^a*$/))) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/a+/))) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/f.*o/) && f1(v2) !== 0) {
          return 1;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/a*/) && f1(v2) !== 0) {
          return 1;
        }
        if (v1.match(/aaa*/) && f2(v2) !== 0) {
          return 2;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 > 20) {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/[0-9]{2,}/) && f1(v2) !== 0) {
          return 1;
        }
        if (v1.match(/X_/) && f2(v2) !== 0) {
          return 2;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== 0) {
        return 2;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== 0) {
            return 1;
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f2(v2) !== 0) {
            return 2;
          } else {
            v3 = true;
          }
        }
        if (v1.match(/f.o/)) {
          if (f3(v2) !== 0) {
            return 3;
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f4(v2) !== 0) {
          return 4;
        }
      }
    }
    return 0;
  }
  function f1(v0) {
    if (Array.isArray(v0) && v0.length > 3) {
      return 5;
    }
    if (!(Array.isArray(v0))) {
      return 6;
    }
    return 0;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      return 7;
    }
    return 0;
  }
  function f3(v0) {
    if (Array.isArray(v0) && v0.length < 2) {
      return 8;
    }
    return 0;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 9;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f0(v2) !== 0) {
            return 1;
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          return 2;
        }
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 2;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== 0) {
      return 1;
    }
    if (1 < v0.length && f1(v0[1]) !== 0) {
      return 2;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 3;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.tilda;
      if (v1 !== undefined && f4(v1) !== 0) {
        return 1;
      }
      v1 = v0.slash;
      if (v1 !== undefined && f4(v1) !== 0) {
        return 2;
      }
      v1 = v0.percent;
      if (v1 !== undefined && f4(v1) !== 0) {
        return 3;
      }
    }
    return 0;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 4;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 5`] = `
"(function() {
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 1;
    }
    return 0;
  }
  return {
    root: f3,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.$ref;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      return 2;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 9`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.meta;
      if (v1 !== undefined) {
        if (f1(v1) !== 0) {
          return 1;
        }
      } else {
        return 2;
      }
      v1 = v0.nodes;
      if (v1 !== undefined) {
        if (f2(v1) !== 0) {
          return 3;
        }
      } else {
        return 4;
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 5;
    }
    return 0;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      return 6;
    }
    return 0;
  }
  function f2(v0) {
    var v1;
    if (Array.isArray(v0)) {
      v1 = 0;
      for (; v1 < v0.length; (v1)++) {
        if (f3(v0[v1]) !== 0) {
          return 7;
        }
      }
    }
    if (!(Array.isArray(v0))) {
      return 8;
    }
    return 0;
  }
  function f3(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f1(v1) !== 0) {
          return 1;
        }
      } else {
        return 2;
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 3;
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== 0) {
        return 1;
      }
    }
    return 0;
  }
  function f1(v0) {
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number') {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'string') {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (!(Array.isArray(v0))) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'boolean') {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    if (v0 !== null) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v2;
    v2 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v2)++;
    }
    if (typeof v0 !== 'string') {
      (v2)++;
    }
    if (v2 === 2) {
      return 1;
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite uniqueItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v2, v3, v4;
    if (Array.isArray(v0)) {
      v2 = {};
      v3 = 0;
      for (; v3 < v0.length; (v3)++) {
        v4 = JSON.stringify(v0[v3]);
        v2[v4] = true;
      }
      if (Object.keys(v2).length !== v0.length) {
        return 1;
      }
    }
    return 0;
  }
  return {
    root: f0,
  };
}())"
`;
